# glaze

./: .agignore  .bazelignore  .bazelrc  .codecov.yml  .dockerignore  .env.example  .env.production.example  .env.production.template  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  Dockerfile  LICENSE  MODULE.bazel  README.md  agents.md  bazel-bin  bazel-glaze  bazel-out  bazel-testlogs  build.sh  buildbuddy.yaml  codecov.yml  container_entrypoint.py  deploy.sh  docker-compose.yml  docker-entrypoint.sh  env-agent.sh  env.sh  issue-body.md  lint.bzl  music_catalog.schema.yml  music_catalog.yml  mypy.ini  otel-collector-config.yml  pr-body-update.md  pr-body.md  pr_body.md  pyproject.toml  (+17 more)
api/: BUILD.bazel  README.md  admin.py  analysis_views.py  apps.py  auth_account_views.py  auth_export_archive.py  auth_export_data.py  auth_export_views.py  auth_google_views.py  auth_invite_views.py  auth_preferences_views.py  auth_views.py  cloudinary_admin_views.py  cloudinary_cleanup.py  cloudinary_views.py  crop_run_views.py  crops.py  dev_bootstrap.py  global_entry_logic.py  global_entry_views.py  health_views.py  import_views.py  invitations.py  llm_schema.py  logging.py  manual_tile_imports.py  model_factories.py  models.py  piece_helpers.py  piece_image_views.py  piece_views.py  preferences.py  r2.py  registry.py  serializer_factories.py  serializer_registry.py  serializers.py  task_views.py  tasks.py  (+8 more)
api/auth/: account_views.py  agent_auth.py  agent_token_views.py  export_archive.py  export_data.py  export_views.py  google_views.py  invite_views.py  jwt_auth.py  mcp_token_views.py  mock_idp_views.py  preferences_views.py  token_views.py  views.py
api/cloudinary/: admin_views.py  views.py
api/dev/: __init__.py  bootstrap.py
api/global_entries/: logic.py  resolvers.py  views.py
api/graphql/: __init__.py  context.py  mutations.py  rest_bridge.py  schema.py  types.py  views.py
api/migrations/: 0001_initial.py  0001_squashed_0001_0023.py  0002_location_model.py  0002_piece_shared.py  0002_remove_invitecode_used_at_remove_invitecode_used_by_and_more.py  0003_asynctask_progress.py  0003_piece_workflow_version_piecestate_additional_fields.py  0003_rename_custom_fields.py  0003_supportthread_supportmessage.py  0004_claybody_glazemethod_glazetype.py  0004_normalize_images.py  0004_supportthread_supportmessage.py  0005_image_crops.py  0005_piecestate_piece_lm_idx.py  0005_remove_piecestate_location.py  0006_asynctask.py  0006_cascade_on_delete.py  0006_piece_current_location.py  0007_image_r2_key.py  0007_piece_showcase_fields_piece_showcase_story.py  0007_user_scoping.py  0008_add_editable_mode.py  0008_add_glaze_type_fields.py  0008_piecestateimage_cropped_fields.py  0009_backfill_piece_state_order.py  0009_image_lineage_psi_cropped_image.py  0009_public_global_libraries.py  0010_agenttoken.py  0010_alter_piecestate_options_alter_piecestate_created.py  0010_glaze_combination.py  0011_add_glaze_combination_name.py  0011_allowedemail.py  0011_alter_agenttoken_token_hash.py  0012_glaze_combination_m2m.py  0012_seed_allowedemail_from_users.py  0013_glazecombination_glaze_types.py  0013_remove_allowedemail_email_redundant_index.py  0014_croprun.py  0014_drop_combination_layer_order_unique.py  0015_croprun_piece_state_image.py  (+28 more)
api/piece/: helpers.py  image_resolvers.py  image_views.py  resolvers.py  showcase_views.py  views.py
api/showcase/: __init__.py  hash.py  music.py  render.py  storyboard.py
api/support/: __init__.py  serializers.py  views.py
api/tests/: conftest.py  mypy_test.sh  test_additional_fields.py  test_admin_exports.py  test_admin_scope.py  test_agent_auth.py  test_analysis.py  test_async_maintenance.py  test_async_tasks.py  test_auth.py  test_celery_tasks.py  test_cloudinary_cleanup.py  test_cloudinary_image_widget.py  test_cloudinary_upload_signature.py  test_convert_image_to_jpeg.py  test_coverage_improvements.py  test_crop_run.py  test_custom_fields.py  test_editable_mode.py  test_gc_derived_images.py  test_generate_cropped_image.py  test_glaze_combination.py  test_glaze_combination_admin.py  test_glaze_combination_picker.py  test_global_entries.py  test_globals.py  test_graphql_mutations.py  test_graphql_pieces.py  test_health.py  test_host_settings.py  test_image_field_migration.py  test_images.py  test_invitations.py  test_issue_337.py  test_keepsake_storyboard.py  test_llm_schema.py  test_locations.py  test_management_commands.py  test_manual_square_crop_import.py  test_mcp_token_exchange.py  (+28 more)
api/uploads/: views.py
backend/: BUILD.bazel  asgi.py  celery.py  middleware.py  otel.py  settings.py  test_settings.py  urls.py
chart/glaze/: BUILD.bazel  Chart.yaml  values.yaml
frontend_common/: BUILD.bazel  tsconfig.json
frontend_common/src/: api.ts  types.ts  workflow.test.ts  workflow.ts  yaml.d.ts
potterdoc_mcp/: BUILD.bazel  Dockerfile  README.md  __init__.py  __main__.py  client.py  pyproject.toml  server.py
potterdoc_mcp/tests/: conftest.py  test_globals.py  test_http_transport.py  test_images.py  test_metadata.py  (+4 more)
services/: BUILD.bazel  __init__.py  glaze_compute_service.py  piece_image_segment_service.py
tests/: BUILD.bazel  README.md  test_admin_access.py  test_backup_cronjob.py  test_bazel_deps.py  test_container_smoke.sh  test_env_agent.py  test_host_firewall.py  test_web_env_bake_guard.py  test_workflow.py
tools/: BUILD.bazel  README.md  cluster_setup.sh  ensure_cluster.sh  ensure_k3s_tailscale.sh  export_graphql_schema.py  generate_index.py  generate_schema.py  grafana_dashboard.py  gz_start_launcher.py  helm_deploy.sh  init_env.sh  kubeconform.sh  mypy_main.py  patch_system_probes.sh  piece_image_crop_service.py  piece_image_segment_service.py  pyproject.toml  pytest_main.py  remote_rembg_service.py  render_values.sh  requirements.in  setup_k3s_tailscale.sh  visualize_crops.py  workspace_status.sh
web/: .env.example  .gitignore  BUILD.bazel  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.bzl  vitest.config.ts
(+534 files in other folders)
