load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@rules_distroless//distroless:defs.bzl", "group", "passwd")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Dev entry point for backend management commands and the local ASGI server.
# `bazel run //:manage -- runserver` etc. work directly; the sibling
# `//:manage.venv` target materializes a venv (.manage.venv at the repo root)
# with the full backend + api dep graph — used by gz_setup and the VSCode
# Python interpreter.
py_binary(
    name = "manage",
    srcs = ["manage.py"],
    main = "manage.py",
    visibility = ["//visibility:public"],
    deps = [
        "//api:api_lib",
        "//backend:backend_lib",
        "@pypi//uvicorn",
    ],
)

exports_files([
    "ruff.toml",
    "mypy.ini",
    "tutorials.yml",
    "tutorials.schema.yml",
    "env-agent.sh",
])

config_setting(
    name = "is_coverage_build",
    values = {"collect_code_coverage": "true"},
)

# ── Workflow YAML source files ────────────────────────────────────────────────
# All Python and JS targets that read workflow.yml at runtime declare this as
# a data dep so it lands in their runfiles.

filegroup(
    name = "workflow_files",
    srcs = [
        "workflow.schema.yml",
        "workflow.yml",
    ],
    visibility = ["//visibility:public"],
)

js_library(
    name = "workflow_js",
    srcs = ["workflow.yml"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "user_preferences_files",
    srcs = [
        "user_preferences.schema.yml",
        "user_preferences.yml",
    ],
    visibility = ["//visibility:public"],
)

js_library(
    name = "user_preferences_js",
    srcs = ["user_preferences.yml"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "tutorials_files",
    srcs = [
        "tutorials.schema.yml",
        "tutorials.yml",
    ],
    visibility = ["//visibility:public"],
)

# Schema-only filegroup: the storyboard schema is read at import time by
# api/showcase/storyboard.py (there is no companion .yml config — storyboards
# are produced in code).
filegroup(
    name = "storyboard_files",
    srcs = [
        "storyboard.schema.yml",
    ],
    visibility = ["//visibility:public"],
)

js_library(
    name = "tutorials_js",
    srcs = ["tutorials.yml"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "music_catalog_files",
    srcs = [
        "music_catalog.schema.yml",
        "music_catalog.yml",
    ],
    visibility = ["//visibility:public"],
)

js_library(
    name = "music_catalog_js",
    srcs = ["music_catalog.yml"],
    visibility = ["//visibility:public"],
)

# ── Fixture data ──────────────────────────────────────────────────────────────

filegroup(
    name = "pytest_ini",
    srcs = ["pytest.ini"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "fixtures",
    srcs = glob(["fixtures/**"]),
    visibility = ["//visibility:public"],
)

# ── Lint tool binaries (used by lint.bzl aspects) ─────────────────────────────

# ruff ships as a native binary wheel with no entry_points.txt; use the
# pre-built binary from aspect_rules_lint instead of py_console_script_binary.
alias(
    name = "ruff",
    actual = "@aspect_rules_lint//lint:ruff",
    visibility = ["//visibility:public"],
)

# ── OCI container image ───────────────────────────────────────────────────────
#
# bazel build //:image        — assemble the OCI image locally
# bazel run   //:push         — push to ghcr.io/shaoster/glaze:<tag>
#
# Image layout (all under /app):
#   /app/                      Django project root (manage.py, backend/, api/, etc.)
#   /app/web/dist/             Vite-built SPA (served by WhiteNoise at URL root)
#   /app/site-packages/        uv-synced runtime deps (added to PYTHONPATH)
#   /app/staticfiles/          collected static assets (built by staticfiles_tar genrule)

# Dependency layer — sync runtime deps into a temp venv, then flatten its
# site-packages into /app/site-packages. Tagged no-sandbox because uv needs
# network access to download wheels.
genrule(
    name = "python_layer_tar",
    srcs = [
        "//:pyproject.toml",
        "//:uv.lock",
    ],
    tools = ["@uv//:uv"],
    outs = ["python_layer.tar"],
    cmd = """
        set -e
        export HOME=$$(mktemp -d)
        UV="$$PWD/$(location @uv//:uv)"
        PYTHON3_ABS="$$PWD/$(PYTHON3)"
        OUT_TAR="$$PWD/$@"

        work=$$(mktemp -d)
        dest=$$(mktemp -d)
        cp $(location //:pyproject.toml) "$$work/pyproject.toml"
        cp $(location //:uv.lock) "$$work/uv.lock"

        # Sync only the locked runtime dependencies into an isolated venv.
        cd "$$work"
        $$UV sync \
            --frozen \
            --no-dev \
            --no-install-project \
            --no-editable \
            --python "$$PYTHON3_ABS"

        # Flatten site-packages to /app/site-packages in the tarball.
        sp=$$(find "$$work/.venv" -type d -name site-packages | head -1)
        mkdir -p "$$dest/app"
        mv "$$sp" "$$dest/app/site-packages"
        tar -C "$$dest" -cf "$$OUT_TAR" app/site-packages
        rm -rf "$$dest" "$$work" "$$HOME"
    """,
    toolchains = ["@rules_python//python:current_py_toolchain"],
    tags = ["no-sandbox"],
)

# Django source layer — everything the app needs at runtime except deps and dist.
pkg_tar(
    name = "app_src_tar",
    srcs = [
        "manage.py",
        "workflow.yml",
        "workflow.schema.yml",
        "user_preferences.yml",
        "user_preferences.schema.yml",
        "tutorials.yml",
        "tutorials.schema.yml",
        "storyboard.schema.yml",
        "music_catalog.yml",
        "music_catalog.schema.yml",
        "docker-entrypoint.sh",
        "//api:api_runtime_files",
        "//backend:backend_runtime_files",
        # Audio assets are stored via git-LFS and not included here; the renderer
        # resolves audio.url at runtime from the LFS-populated working tree or a
        # hosted location. Add them to this tar if the image ever needs to serve
        # audio directly.
    ] + glob(["fixtures/**"], allow_empty = True),
    strip_prefix = ".",
    package_dir = "/app",
)

# Vite frontend layer — web/dist produced by the Bazel vite build.
pkg_tar(
    name = "web_dist_tar",
    srcs = ["//web:web_build"],
    strip_prefix = "web/dist",
    package_dir = "/app/web/dist",
)

# Static files layer — run collectstatic at build time so container startup
# doesn't block on it. Needs site-packages (DRF assets) + app source.
genrule(
    name = "staticfiles_tar",
    srcs = [
        ":python_layer_tar",
        ":app_src_tar",
        ":web_dist_tar",
    ],
    outs = ["staticfiles.tar"],
    cmd = """
        set -e
        tmp=$$(mktemp -d)
        tar -xf $(location :python_layer_tar) -C "$$tmp"
        tar -xf $(location :app_src_tar) -C "$$tmp"
        tar -xf $(location :web_dist_tar) -C "$$tmp"
        PYTHON3="$$PWD/$(PYTHON3)"
        OUT_TAR="$$PWD/$@"
        export PYTHONPATH="$$tmp/app:$$tmp/app/site-packages"
        export DJANGO_SETTINGS_MODULE=backend.settings
        export SECRET_KEY=buildtime-placeholder
        cd "$$tmp/app"
        "$$PYTHON3" manage.py collectstatic --no-input
        tar -C "$$tmp" -cf "$$OUT_TAR" app/staticfiles
        rm -rf "$$tmp"
    """,
    toolchains = ["@rules_python//python:current_py_toolchain"],
    tags = ["no-sandbox"],
)

genrule(
    name = "version_txt",
    srcs = [],
    outs = ["version.txt"],
    # Workspace status variables are not Make vars; must read stable-status.txt directly.
    cmd = "grep 'STABLE_GIT_COMMIT' bazel-out/stable-status.txt | awk '{print $$2}' > $@",
    stamp = 1,
)

pkg_tar(
    name = "version_tar",
    srcs = [":version_txt"],
    package_dir = "/app",
)

oci_image(
    name = "image",
    base = "@python312_slim",
    tars = [
        ":python_layer_tar",
        ":app_src_tar",
        ":web_dist_tar",
        ":staticfiles_tar",
        ":version_tar",
    ],
    env = {
        "PYTHONPATH": "/app:/app/site-packages",
        "PYTHONDONTWRITEBYTECODE": "1",
        "PYTHONUNBUFFERED": "1",
        "DJANGO_SETTINGS_MODULE": "backend.settings",
        # Limit CPU contention and prevent deadlocks in multi-worker environments
        "OMP_NUM_THREADS": "1",
        "MKL_NUM_THREADS": "1",
        "ONNXRUNTIME_INTER_OP_NUM_THREADS": "1",
        "ONNXRUNTIME_INTRA_OP_NUM_THREADS": "1",
    },
    workdir = "/app",
    entrypoint = ["/bin/bash", "/app/docker-entrypoint.sh"],
    exposed_ports = ["8000/tcp"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/shaoster/glaze",
    # Tag is set at push time via --tag flag or OCI_TAG env var.
    # Example: bazel run //:push -- --tag $(git rev-parse --short HEAD)
)

# passwd/group layers for the celery worker image.
# rules_distroless generates /etc/passwd and /etc/group as additive OCI layers,
# appending celery (uid/gid 1001) without clobbering existing base image users.
passwd(
    name = "celery_passwd",
    entries = [
        {
            "username": "celery",
            "uid": 1001,
            "gid": 1001,
            "gecos": [],
            "home": "/home/celery",
            "shell": "/usr/sbin/nologin",
        },
    ],
)

group(
    name = "celery_group",
    entries = [
        {
            "name": "celery",
            "gid": 1001,
        },
    ],
)

oci_image(
    name = "celery_worker_image",
    base = ":image",
    tars = [":celery_passwd", ":celery_group"],
    user = "celery",
    entrypoint = ["python", "-m", "celery", "-A", "backend", "worker", "-l", "INFO"],
)

oci_push(
    name = "push_worker",
    image = ":celery_worker_image",
    repository = "ghcr.io/shaoster/glaze-worker",
)# Load the freshly-built image into the local docker daemon so CI (and devs)
# can `docker compose up` against it without a registry round-trip.
# `bazel run //:load` tags it as ghcr.io/shaoster/glaze:latest, matching the
# image reference in docker-compose.yml.
oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["ghcr.io/shaoster/glaze:latest"],
)

# ── Kubernetes manifest validation ───────────────────────────────────────────

filegroup(
    name = "k3s_manifests",
    srcs = glob(["infra/k3s/*.yaml"]),
    visibility = ["//visibility:public"],
)
