load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_image_layer")
load("@rules_distroless//distroless:defs.bzl", "group", "passwd")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Dev entry point for backend management commands and the local ASGI server.
# `bazel run //:manage -- runserver` etc. work directly; the sibling
# `//:manage.venv` target materializes a venv (.manage.venv at the repo root)
# with the full backend + api dep graph — used by gz_setup and the VSCode
# Python interpreter.
py_binary(
    name = "manage",
    srcs = ["manage.py"],
    main = "manage.py",
    visibility = ["//visibility:public"],
    deps = [
        "//api:api_lib",
        "//backend:backend_lib",
        "@pypi//uvicorn",
    ],
)

exports_files([
    "ruff.toml",
    "mypy.ini",
    "tutorials.yml",
    "tutorials.schema.yml",
    "env-agent.sh",
])

config_setting(
    name = "is_coverage_build",
    values = {"collect_code_coverage": "true"},
)

# ── Workflow YAML source files ────────────────────────────────────────────────
# All Python and JS targets that read workflow.yml at runtime declare this as
# a data dep so it lands in their runfiles.

filegroup(
    name = "workflow_files",
    srcs = [
        "workflow.schema.yml",
        "workflow.yml",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "grafana_dashboard_files",
    srcs = [
        "grafana/dashboards/glaze-app-summary.yaml",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "third_party_python_files",
    srcs = glob(["third_party/python/**"]),
    visibility = ["//visibility:public"],
)

js_library(
    name = "workflow_js",
    srcs = ["workflow.yml"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "user_preferences_files",
    srcs = [
        "user_preferences.schema.yml",
        "user_preferences.yml",
    ],
    visibility = ["//visibility:public"],
)

js_library(
    name = "user_preferences_js",
    srcs = ["user_preferences.yml"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "tutorials_files",
    srcs = [
        "tutorials.schema.yml",
        "tutorials.yml",
    ],
    visibility = ["//visibility:public"],
)

# Schema-only filegroup: the storyboard schema is read at import time by
# api/showcase/storyboard.py (there is no companion .yml config — storyboards
# are produced in code).
filegroup(
    name = "storyboard_files",
    srcs = [
        "storyboard.schema.yml",
    ],
    visibility = ["//visibility:public"],
)

js_library(
    name = "tutorials_js",
    srcs = ["tutorials.yml"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "music_catalog_files",
    srcs = [
        "music_catalog.schema.yml",
        "music_catalog.yml",
    ],
    visibility = ["//visibility:public"],
)

js_library(
    name = "music_catalog_js",
    srcs = ["music_catalog.yml"],
    visibility = ["//visibility:public"],
)

# ── Fixture data ──────────────────────────────────────────────────────────────

filegroup(
    name = "pytest_ini",
    srcs = ["pytest.ini"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "fixtures",
    srcs = glob(["fixtures/**"]),
    visibility = ["//visibility:public"],
)

# ── Lint tool binaries (used by lint.bzl aspects) ─────────────────────────────

# ruff ships as a native binary wheel with no entry_points.txt; use the
# pre-built binary from aspect_rules_lint instead of py_console_script_binary.
alias(
    name = "ruff",
    actual = "@aspect_rules_lint//lint:ruff",
    visibility = ["//visibility:public"],
)

# ── OCI container image ───────────────────────────────────────────────────────
#
# bazel build //:image        — assemble the OCI image locally
# bazel run   //:push         — push to ghcr.io/shaoster/glaze:<tag>
#
# The runtime image stays conventional (`/app/...` plus a shell entrypoint).
# We keep the hermetic dependency layer from py_image_layer, and if startup
# logic ever gets interesting again we can swap back to a Python launcher.

py_binary(
    name = "runtime_deps",
    srcs = ["manage.py"],
    main = "manage.py",
    deps = [
        "//api:api_lib",
        "//backend:backend_lib",
        "@pypi//gunicorn",
        "@pypi//uvicorn",
    ],
)

py_image_layer(
    name = "python_layer",
    binary = ":runtime_deps",
    root = "/app",
)

pkg_tar(
    name = "app_src_tar",
    srcs = [
        "manage.py",
        "workflow.yml",
        "workflow.schema.yml",
        "user_preferences.yml",
        "user_preferences.schema.yml",
        "tutorials.yml",
        "tutorials.schema.yml",
        "storyboard.schema.yml",
        "music_catalog.yml",
        "music_catalog.schema.yml",
        "docker-entrypoint.sh",
        "//api:api_runtime_files",
        "//backend:backend_runtime_files",
    ] + glob(["fixtures/**"], allow_empty = True)
      + glob(["assets/showcase_music/**"], allow_empty = True)
      + glob(["assets/fonts/**"], allow_empty = False),
    strip_prefix = ".",
    package_dir = "/app",
)

pkg_tar(
    name = "web_dist_tar",
    srcs = ["//web:web_build"],
    strip_prefix = "web/dist",
    package_dir = "/app/web/dist",
)

# Repackage the hermetic site-packages tree from py_image_layer into a plain
# /app/site-packages layer so the runtime image does not expose Bazel runfiles.
# If startup ever needs to become more sophisticated, we can swap back to a
# Python launcher without changing the dependency layer.
genrule(
    name = "python_layer_tar",
    srcs = [
        ":python_layer",
    ],
    outs = ["python_layer.tar"],
    cmd = """
        set -e
        tmp=$$(mktemp -d)
        dest=$$(mktemp -d)
        for layer in $(locations :python_layer); do
            tar -xf "$$layer" -C "$$tmp"
        done
        mkdir -p "$$dest/app/site-packages"
        copied=0
        while IFS= read -r site_packages; do
            cp -a "$$site_packages"/. "$$dest/app/site-packages"/
            copied=1
        done < <(find "$$tmp" -type d -path '*/site-packages' | sort)
        if [ "$$copied" -ne 1 ]; then
            echo "No site-packages directories were found in the py_image_layer output" >&2
            rm -rf "$$tmp" "$$dest"
            exit 1
        fi
        OUT_TAR="$$PWD/$@"
        tar -C "$$dest" -cf "$$OUT_TAR" app/site-packages
        rm -rf "$$tmp" "$$dest"
    """,
    tags = ["no-sandbox"],
)

# Static files layer — run collectstatic at build time so container startup
# doesn't block on it. Needs site-packages (DRF assets) + app source.
genrule(
    name = "staticfiles_tar",
    srcs = [
        ":python_layer_tar",
        ":app_src_tar",
        ":web_dist_tar",
    ],
    outs = ["staticfiles.tar"],
    cmd = """
        set -e
        tmp=$$(mktemp -d)
        tar -xf $(location :python_layer_tar) -C "$$tmp"
        tar -xf $(location :app_src_tar) -C "$$tmp"
        tar -xf $(location :web_dist_tar) -C "$$tmp"
        PYTHON3="$$PWD/$(PYTHON3)"
        OUT_TAR="$$PWD/$@"
        export PYTHONPATH="$$tmp/app:$$tmp/app/site-packages"
        export DJANGO_SETTINGS_MODULE=backend.settings
        export SECRET_KEY=buildtime-placeholder
        cd "$$tmp/app"
        "$$PYTHON3" manage.py collectstatic --no-input
        tar -C "$$tmp" -cf "$$OUT_TAR" app/staticfiles
        rm -rf "$$tmp"
    """,
    toolchains = ["@rules_python//python:current_py_toolchain"],
    tags = ["no-sandbox"],
)

genrule(
    name = "version_txt",
    srcs = [],
    outs = ["version.txt"],
    # Workspace status variables are not Make vars; must read stable-status.txt directly.
    cmd = "grep 'STABLE_GIT_COMMIT' bazel-out/stable-status.txt | awk '{print $$2}' > $@",
    stamp = 1,
)

pkg_tar(
    name = "version_tar",
    srcs = [":version_txt"],
    package_dir = "/app",
)

oci_image(
    name = "image",
    base = "@python312_slim",
    entrypoint = [
        "/bin/bash",
        "/app/docker-entrypoint.sh",
    ],
    env = {
        "PYTHONPATH": "/app:/app/site-packages",
        "PYTHONDONTWRITEBYTECODE": "1",
        "PYTHONUNBUFFERED": "1",
        "DJANGO_SETTINGS_MODULE": "backend.settings",
        # Limit CPU contention and prevent deadlocks in multi-worker environments
        "OMP_NUM_THREADS": "1",
        "MKL_NUM_THREADS": "1",
        "ONNXRUNTIME_INTER_OP_NUM_THREADS": "1",
        "ONNXRUNTIME_INTRA_OP_NUM_THREADS": "1",
    },
    exposed_ports = ["8000/tcp"],
    tars = [
        ":python_layer_tar",
        ":app_src_tar",
        ":web_dist_tar",
        ":staticfiles_tar",
        ":version_tar",
    ],
    workdir = "/app",
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/shaoster/glaze",
    # Tag is set at push time via --tag flag or OCI_TAG env var.
    # Example: bazel run //:push -- --tag $(git rev-parse --short HEAD)
)

# passwd/group layers for the celery worker image.
# rules_distroless generates /etc/passwd and /etc/group as additive OCI layers,
# appending celery (uid/gid 1001) without clobbering existing base image users.
passwd(
    name = "celery_passwd",
    entries = [
        {
            "username": "celery",
            "uid": 1001,
            "gid": 1001,
            "gecos": [],
            "home": "/home/celery",
            "shell": "/usr/sbin/nologin",
        },
    ],
)

group(
    name = "celery_group",
    entries = [
        {
            "name": "celery",
            "gid": 1001,
        },
    ],
)

oci_image(
    name = "celery_worker_image",
    base = ":image",
    entrypoint = [
        "/bin/bash",
        "/app/docker-entrypoint.sh",
        "celery",
        "-A",
        "backend",
        "worker",
        "-l",
        "INFO",
    ],
    tars = [
        ":celery_passwd",
        ":celery_group",
    ],
    user = "celery",
)

oci_push(
    name = "push_worker",
    image = ":celery_worker_image",
    repository = "ghcr.io/shaoster/glaze-worker",
)  # Load the freshly-built image into the local docker daemon so CI (and devs)

# can `docker compose up` against it without a registry round-trip.
# `bazel run //:load` tags it as ghcr.io/shaoster/glaze:latest, matching the
# image reference in docker-compose.yml.
oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["ghcr.io/shaoster/glaze:latest"],
)

# ── Kubernetes manifest validation ───────────────────────────────────────────

filegroup(
    name = "k3s_manifests",
    srcs = glob(["infra/k3s/*.yaml"]),
    visibility = ["//visibility:public"],
)
