module(
    name = "glaze",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.1.0")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "aspect_rules_py", version = "1.11.5")
bazel_dep(name = "aspect_rules_ts", version = "3.8.8")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "aspect_rules_lint", version = "2.5.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# ── Python toolchain ──────────────────────────────────────────────────────────

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.12",
)

# ── Pip: all deps (requirements.txt — single flat lock file) ─────────────────

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements.lock",
)
pip.parse(
    hub_name = "tools_pip",
    python_version = "3.12",
    requirements_lock = "//tools:requirements.lock",
)
use_repo(pip, "pip", "tools_pip")

interpreters = use_extension("@aspect_rules_py//py/unstable:extension.bzl", "python_interpreters")
interpreters.toolchain(python_version = "3.12", is_default = True)
use_repo(interpreters, "python_interpreters")
register_toolchains("@python_interpreters//:all")

uv_bin = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv_bin")
uv_bin.toolchain()
use_repo(uv_bin, "uv")
register_toolchains("@uv//:all")

uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")
uv.declare_hub(hub_name = "pypi")
uv.project(
    hub_name = "pypi",
    lock = "//:uv.lock",
    pyproject = "//:pyproject.toml",
    default_build_dependencies = [],
)
use_repo(uv, "pypi")

# ── Node toolchain ────────────────────────────────────────────────────────────

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.12.0")
use_repo(node, "nodejs_linux_amd64", "nodejs_toolchains")

register_toolchains("@nodejs_toolchains//:linux_amd64_toolchain")

# ── npm packages (pnpm-lock.yaml — run `cd web && npx pnpm import` once) ──────

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    data = ["//web:package.json"],
    pnpm_lock = "//web:pnpm-lock.yaml",
    lifecycle_hooks_exclude = ["*"],
    update_pnpm_lock = True,
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# ── TypeScript compiler for ts_project ───────────────────────────────────────

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_version_from = "//web:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

# ── OCI base image ───────────────────────────────────────────────────────────

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "python312_slim",
    digest = "sha256:46cb7cc2877e60fbd5e21a9ae6115c30ace7a077b9f8772da879e4590c18c2e3",
    image = "index.docker.io/library/python",
    platforms = ["linux/amd64"],
)
use_repo(oci, "python312_slim", "python312_slim_linux_amd64")

# ── mypy type stubs (auto-generated from requirements.txt) ────────────────────
# Generates @pip_types//:types.bzl — a map from pip package name to its
# py_type_library target — so mypy_aspect can provide stub deps automatically.
